added users, fixed apis
