# apis/docs/swagger.yaml
@@ -10,6 +10,17 @@ definitions:
       status:
         type: string
     type: object
+  models.Cart:
+    properties:
+      id:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/models.CartItem'
+        type: array
+      totalprice:
+        type: number
+    type: object
   models.CartItem:
     properties:
       item_id:
@@ -35,7 +46,7 @@ definitions:
       status:
         description: e.g., "pending", "confirmed", "delivered"
         type: string
-      total_price:
+      totalprice:
         type: number
       updated_at:
         type: string
@@ -70,7 +81,24 @@ definitions:
       price:
         type: number
     type: object
-host: localhost:8080
+  models.User:
+    properties:
+      _id:
+        type: string
+      age:
+        type: integer
+      cart_id:
+        type: string
+      email:
+        type: string
+      is_active:
+        type: boolean
+      name:
+        type: string
+      type:
+        type: string
+    type: object
+host: localhost:3000
 info:
   contact:
     email: support@jevan.app
@@ -79,6 +107,87 @@ info:
   title: Jevan - Mess Management API
   version: "1.0"
 paths:
+  /cart:
+    post:
+      consumes:
+      - application/json
+      description: Creates or updates a cart with new list of items and total price
+      parameters:
+      - description: Cart object
+        in: body
+        name: cart
+        required: true
+        schema:
+          $ref: '#/definitions/models.Cart'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Cart updated successfully
+          schema:
+            $ref: '#/definitions/models.Cart'
+        "400":
+          description: Invalid cart data
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Could not update cart
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Overwrite or add items to cart
+      tags:
+      - Cart
+  /cart/{cartId}/item/{itemId}:
+    put:
+      consumes:
+      - application/json
+      description: Updates the quantity of a specific item in a cart, removes if quantity
+        = 0
+      parameters:
+      - description: Cart ID
+        in: path
+        name: cartId
+        required: true
+        type: string
+      - description: Item ID
+        in: path
+        name: itemId
+        required: true
+        type: string
+      - description: Quantity payload
+        in: body
+        name: request
+        required: true
+        schema:
+          additionalProperties:
+            type: integer
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated cart
+          schema:
+            $ref: '#/definitions/models.Cart'
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to update item
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update quantity of a cart item
+      tags:
+      - Cart
   /cart/{id}:
     get:
       consumes:
@@ -86,7 +195,6 @@ paths:
       description: Get items in a cart using cartId
       parameters:
       - description: Cart ID
-        example: '"cart123"'
         in: path
         name: id
         required: true
@@ -95,11 +203,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: List of items in cart
+          description: Cart object with all items
           schema:
-            items:
-              $ref: '#/definitions/models.CartItem'
-            type: array
+            $ref: '#/definitions/models.Cart'
         "400":
           description: Failed to get items from cart
           schema:
@@ -114,7 +220,6 @@ paths:
       description: Remove all items from the cart identified by cartId
       parameters:
       - description: Cart ID
-        example: '"cart123"'
         in: path
         name: id
         required: true
@@ -123,78 +228,12 @@ paths:
       - application/json
       responses:
         "200":
-          description: All items deleted successfully
-          schema:
-            type: string
+          description: OK
         "400":
           description: Failed to delete items from cart
           schema:
             $ref: '#/definitions/commons.ApiErrorResponsePayload'
       summary: Delete all items from cart
-      tags:
-      - Cart
-  /cart/{id}/items/{itemId}:
-    delete:
-      consumes:
-      - application/json
-      description: Remove an item from the cart using itemId
-      parameters:
-      - description: Cart ID
-        example: '"cart123"'
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Item ID
-        example: '"item456"'
-        in: query
-        name: itemId
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Item deleted successfully
-          schema:
-            type: string
-        "400":
-          description: Failed to delete item
-          schema:
-            $ref: '#/definitions/commons.ApiErrorResponsePayload'
-      summary: Delete item from cart
-      tags:
-      - Cart
-  /cart/id:
-    post:
-      consumes:
-      - application/json
-      description: Add an item to the cart identified by cartId
-      parameters:
-      - description: Cart ID
-        example: '"cart123"'
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Item to add to cart
-        in: body
-        name: item
-        required: true
-        schema:
-          $ref: '#/definitions/models.CartItem'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully added item to cart
-          schema:
-            $ref: '#/definitions/models.CartItem'
-        "400":
-          description: Invalid input or failed to add item
-          schema:
-            $ref: '#/definitions/commons.ApiErrorResponsePayload'
-      summary: Add item to cart
       tags:
       - Cart
   /orders:
@@ -398,4 +437,127 @@ paths:
       summary: Update Product
       tags:
       - Product
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: get details of all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/commons.ApiErrorResponsePayload'
+      summary: GetUsers
+      tags:
+      - User Management
+    post:
+      consumes:
+      - application/json
+      description: Create a user with name, email, age, and is_Active status
+      parameters:
+      - description: User data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/commons.ApiErrorResponsePayload'
+      summary: CreateUser
+      tags:
+      - User Management
+  /users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete user details by user id
+      parameters:
+      - description: User id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/commons.ApiErrorResponsePayload'
+      summary: DeleteUserById
+      tags:
+      - User Management
+    get:
+      consumes:
+      - application/json
+      description: Gets user details by user id such as name, email, status etc.
+      parameters:
+      - description: User id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/commons.ApiErrorResponsePayload'
+      summary: GetUserById
+      tags:
+      - User Management
+    patch:
+      consumes:
+      - application/json
+      description: update user details such as name, email, age, and is_Active status
+        bu user id
+      parameters:
+      - description: User data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      - description: User Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/commons.ApiErrorResponsePayload'
+      summary: UpdateUser
+      tags:
+      - User Management
 swagger: "2.0"
