# internals/db/models/order.go
@@ -6,7 +6,7 @@ type OrderSchema struct {
 	ID         primitive.ObjectID `bson:"_id,omitempty"`
 	UserID     primitive.ObjectID `bson:"user_id"`
 	Items      []OrderItemSchema  `bson:"items"`
-	TotalPrice float64            `bson:"total_price"`
+	TotalPrice float64            `bson:"totalprice"`
 	Status     string             `bson:"status"`     // e.g., "pending", "confirmed", "delivered"
 	OrderedAt  int64              `bson:"ordered_at"` // Unix timestamp
 }
